@@ -114,5 +114,6 @@ Rob Hetland
 Scott Sinclair
 Ivan Lima
 Erik Andersen
+Michael Hearne
 
 for valuable contributions.
